// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectAlertRuleDetails Edit alert rule renders 1`] = `
<ProjectAlertRuleDetails
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
      "ruleId": "1",
    }
  }
  routes={
    Array [
      Object {
        "path": "/",
      },
      Object {
        "indexRoute": Object {},
        "name": "Settings",
        "newnew": true,
        "path": "/settings/",
      },
      Object {
        "name": "Organization",
        "path": ":orgId/",
      },
      Object {
        "name": "Project",
        "path": ":projectId/",
      },
      Object {},
      Object {
        "indexRoute": Object {
          "name": "General",
        },
      },
      Object {
        "indexRoute": Object {},
        "name": "Alerts",
        "path": "alerts/",
      },
      Object {
        "childRoutes": Array [
          Object {
            "name": "New",
            "path": "new/",
          },
          Object {
            "name": "Edit",
            "path": ":ruleId/",
          },
        ],
        "component": null,
        "indexRoute": Object {},
        "name": "Rules",
        "path": "rules/",
      },
      Object {
        "name": "Edit",
        "path": ":ruleId/",
      },
    ]
  }
>
  <SideEffect(DocumentTitle)
    title="Sentry"
  >
    <DocumentTitle
      title="Sentry"
    >
      <RuleEditor
        actions={
          Array [
            Object {
              "enabled": true,
              "id": "sentry.rules.actions.notify1",
              "label": "Send a notification for all services",
            },
          ]
        }
        conditions={
          Array [
            Object {
              "enabled": true,
              "id": "sentry.rules.conditions.1",
              "label": "An event is seen",
            },
          ]
        }
        organization={
          Object {
            "access": Array [
              "org:read",
              "org:write",
              "org:admin",
              "project:read",
              "project:write",
              "project:admin",
              "team:read",
              "team:write",
              "team:admin",
            ],
            "features": Array [],
            "id": "3",
            "name": "Organization Name",
            "onboardingTasks": Array [],
            "projects": Array [],
            "slug": "org-slug",
            "status": Object {
              "id": "active",
              "name": "active",
            },
            "teams": Array [],
          }
        }
        params={
          Object {
            "orgId": "org-slug",
            "projectId": "project-slug",
            "ruleId": "1",
          }
        }
        project={
          Object {
            "hasAccess": true,
            "id": "2",
            "isBookmarked": false,
            "isMember": true,
            "name": "Project Name",
            "slug": "project-slug",
            "teams": Array [],
          }
        }
        routes={
          Array [
            Object {
              "path": "/",
            },
            Object {
              "indexRoute": Object {},
              "name": "Settings",
              "newnew": true,
              "path": "/settings/",
            },
            Object {
              "name": "Organization",
              "path": ":orgId/",
            },
            Object {
              "name": "Project",
              "path": ":projectId/",
            },
            Object {},
            Object {
              "indexRoute": Object {
                "name": "General",
              },
            },
            Object {
              "indexRoute": Object {},
              "name": "Alerts",
              "path": "alerts/",
            },
            Object {
              "childRoutes": Array [
                Object {
                  "name": "New",
                  "path": "new/",
                },
                Object {
                  "name": "Edit",
                  "path": ":ruleId/",
                },
              ],
              "component": null,
              "indexRoute": Object {},
              "name": "Rules",
              "path": "rules/",
            },
            Object {
              "name": "Edit",
              "path": ":ruleId/",
            },
          ]
        }
      >
        <form
          onSubmit={[Function]}
        >
          <Panel
            className="rule-detail"
          >
            <StyledPanel
              className="rule-detail"
            >
              <div
                className="rule-detail css-17lswg2-StyledPanel e1laxa7d0"
              >
                <PanelHeader>
                  <StyledPanelHeader>
                    <Component
                      className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
                    >
                      <Flex
                        align="center"
                        className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
                        justify="space-between"
                      >
                        <Base
                          align="center"
                          className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                          justify="space-between"
                        >
                          <div
                            className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                            is={null}
                          >
                            Edit Alert Rule
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </StyledPanelHeader>
                </PanelHeader>
                <PanelBody
                  direction="column"
                  disablePadding={false}
                  flex={false}
                >
                  <div
                    className="css-zhfi4l-padding-textStyles"
                  >
                    <h6>
                      Rule name
                      :
                    </h6>
                    <TextField
                      defaultValue="My alert rule"
                      disabled={false}
                      hideErrorMessage={false}
                      name="name"
                      onChange={[Function]}
                      placeholder="My Rule Name"
                      required={true}
                    >
                      <div
                        className="control-group required"
                      >
                        <div
                          className="controls"
                        >
                          <input
                            className="form-control"
                            disabled={false}
                            id="id-name"
                            name="name"
                            onChange={[Function]}
                            placeholder="My Rule Name"
                            required={true}
                            type="text"
                            value="My alert rule"
                          />
                        </div>
                      </div>
                    </TextField>
                    <hr />
                    <AlertRuleRow>
                      <h6
                        className="css-1pc4igl-AlertRuleRow elb7f1e0"
                      >
                        Every time 
                        <Select2Field
                          allowClear={false}
                          allowEmpty={false}
                          choices={
                            Array [
                              Array [
                                "all",
                                "all",
                              ],
                              Array [
                                "any",
                                "any",
                              ],
                              Array [
                                "none",
                                "none",
                              ],
                            ]
                          }
                          className=""
                          disabled={false}
                          escapeMarkup={true}
                          hideErrorMessage={false}
                          key="1"
                          multiple={false}
                          name="actionMatch"
                          onChange={[Function]}
                          placeholder="--"
                          required={true}
                          style={
                            Object {
                              "marginBottom": 0,
                              "marginLeft": 5,
                              "marginRight": 5,
                              "width": 100,
                            }
                          }
                        >
                          <div
                            className="control-group required"
                            style={
                              Object {
                                "marginBottom": 0,
                                "marginLeft": 5,
                                "marginRight": 5,
                                "width": 100,
                              }
                            }
                          >
                            <div
                              className="controls"
                            >
                              <select
                                className="form-control"
                                disabled={false}
                                id="id-actionMatch"
                                multiple={false}
                                onChange={[Function]}
                                placeholder="--"
                                required={true}
                                value=""
                              >
                                <option
                                  key="all"
                                  value="all"
                                >
                                  all
                                </option>
                                <option
                                  key="any"
                                  value="any"
                                >
                                  any
                                </option>
                                <option
                                  key="none"
                                  value="none"
                                >
                                  none
                                </option>
                              </select>
                            </div>
                          </div>
                        </Select2Field>
                         of these conditions are met:
                      </h6>
                    </AlertRuleRow>
                    <RuleNodeList
                      className="rule-condition-list"
                      handleAddRow={[Function]}
                      handleDeleteRow={[Function]}
                      handlePropertyChange={[Function]}
                      items={
                        Array [
                          Object {
                            "id": "sentry.rules.conditions.1",
                            "name": "An alert is first seen",
                          },
                        ]
                      }
                      nodes={
                        Array [
                          Object {
                            "enabled": true,
                            "id": "sentry.rules.conditions.1",
                            "label": "An event is seen",
                          },
                        ]
                      }
                    >
                      <div
                        className="rule-condition-list"
                      >
                        <RuleNodes>
                          <div
                            className="css-wlwbnk-RuleNodes e17yy09u0"
                          >
                            <RuleNode
                              data={
                                Object {
                                  "id": "sentry.rules.conditions.1",
                                  "name": "An alert is first seen",
                                }
                              }
                              handleDelete={[Function]}
                              handlePropertyChange={[Function]}
                              key="0"
                              node={
                                Object {
                                  "enabled": true,
                                  "id": "sentry.rules.conditions.1",
                                  "label": "An event is seen",
                                }
                              }
                            >
                              <RuleNodeRow>
                                <div
                                  className="css-5muuhy-RuleNodeRow e1qnqozx0"
                                >
                                  <RuleNodeForm>
                                    <div
                                      className="css-7h5qyd-RuleNodeForm e1qnqozx1"
                                    >
                                      <input
                                        name="id"
                                        type="hidden"
                                        value="sentry.rules.conditions.1"
                                      />
                                      An event is seen
                                    </div>
                                  </RuleNodeForm>
                                  <RuleNodeControls>
                                    <div
                                      className="css-1d10zz4-RuleNodeControls e1qnqozx2"
                                    >
                                      <Button
                                        disabled={false}
                                        onClick={[Function]}
                                        size="small"
                                        tabIndex="-1"
                                        type="button"
                                      >
                                        <StyledButton
                                          disabled={false}
                                          onClick={[Function]}
                                          role="button"
                                          size="small"
                                          tabIndex="-1"
                                          type="button"
                                        >
                                          <Component
                                            className="css-dkprmi-StyledButton-getColors e17811v30"
                                            disabled={false}
                                            onClick={[Function]}
                                            role="button"
                                            size="small"
                                            tabIndex="-1"
                                            type="button"
                                          >
                                            <button
                                              className="css-dkprmi-StyledButton-getColors e17811v30"
                                              disabled={false}
                                              onClick={[Function]}
                                              role="button"
                                              size="small"
                                              tabIndex="-1"
                                              type="button"
                                            >
                                              <ButtonLabel
                                                size="small"
                                              >
                                                <Component
                                                  className="css-179w01k-ButtonLabel e17811v31"
                                                  size="small"
                                                >
                                                  <Flex
                                                    align="center"
                                                    className="css-179w01k-ButtonLabel e17811v31"
                                                    size="small"
                                                  >
                                                    <Base
                                                      align="center"
                                                      className="e17811v31 css-8mahft-ButtonLabel"
                                                      size="small"
                                                    >
                                                      <div
                                                        className="e17811v31 css-8mahft-ButtonLabel"
                                                        is={null}
                                                        size="small"
                                                      >
                                                        <span
                                                          className="icon icon-trash"
                                                        />
                                                      </div>
                                                    </Base>
                                                  </Flex>
                                                </Component>
                                              </ButtonLabel>
                                            </button>
                                          </Component>
                                        </StyledButton>
                                      </Button>
                                    </div>
                                  </RuleNodeControls>
                                </div>
                              </RuleNodeRow>
                            </RuleNode>
                          </div>
                        </RuleNodes>
                        <fieldset>
                          <SelectInput
                            disabled={false}
                            multiple={false}
                            onChange={[Function]}
                            placeholder="Select an option..."
                            required={false}
                            showSearch={true}
                            style={
                              Object {
                                "width": "100%",
                              }
                            }
                            value=""
                          >
                            <select
                              disabled={false}
                              multiple={false}
                              onChange={[Function]}
                              placeholder="Select an option..."
                              required={false}
                              style={
                                Object {
                                  "width": "100%",
                                }
                              }
                              value=""
                            >
                              <option
                                key="blank"
                              />
                              <option
                                key="sentry.rules.conditions.1"
                                value="sentry.rules.conditions.1"
                              >
                                An event is seen
                              </option>
                            </select>
                          </SelectInput>
                        </fieldset>
                      </div>
                    </RuleNodeList>
                    <hr />
                    <h6>
                      In this environment
                      :
                    </h6>
                    <Select2Field
                      allowClear={false}
                      allowEmpty={false}
                      choices={
                        Array [
                          Array [
                            "__all_environments__",
                            "All Environments",
                          ],
                          Array [
                            "production",
                            "Production",
                          ],
                          Array [
                            "staging",
                            "Staging",
                          ],
                        ]
                      }
                      className=""
                      disabled={false}
                      escapeMarkup={true}
                      hideErrorMessage={false}
                      multiple={false}
                      name="environment"
                      onChange={[Function]}
                      placeholder="--"
                      required={true}
                      style={
                        Object {
                          "marginBottom": 0,
                          "marginLeft": 5,
                          "marginRight": 5,
                        }
                      }
                      value="staging"
                    >
                      <div
                        className="control-group required"
                        style={
                          Object {
                            "marginBottom": 0,
                            "marginLeft": 5,
                            "marginRight": 5,
                          }
                        }
                      >
                        <div
                          className="controls"
                        >
                          <select
                            className="form-control"
                            disabled={false}
                            id="id-environment"
                            multiple={false}
                            onChange={[Function]}
                            placeholder="--"
                            required={true}
                            value="staging"
                          >
                            <option
                              key="__all_environments__"
                              value="__all_environments__"
                            >
                              All Environments
                            </option>
                            <option
                              key="production"
                              value="production"
                            >
                              Production
                            </option>
                            <option
                              key="staging"
                              value="staging"
                            >
                              Staging
                            </option>
                          </select>
                        </div>
                      </div>
                    </Select2Field>
                    <hr />
                    <h6>
                      Take these actions:
                    </h6>
                    <RuleNodeList
                      handleAddRow={[Function]}
                      handleDeleteRow={[Function]}
                      handlePropertyChange={[Function]}
                      items={
                        Array [
                          Object {
                            "id": "sentry.rules.actions.notify1",
                            "name": "Send a notification to all services",
                          },
                        ]
                      }
                      nodes={
                        Array [
                          Object {
                            "enabled": true,
                            "id": "sentry.rules.actions.notify1",
                            "label": "Send a notification for all services",
                          },
                        ]
                      }
                    >
                      <div>
                        <RuleNodes>
                          <div
                            className="css-wlwbnk-RuleNodes e17yy09u0"
                          >
                            <RuleNode
                              data={
                                Object {
                                  "id": "sentry.rules.actions.notify1",
                                  "name": "Send a notification to all services",
                                }
                              }
                              handleDelete={[Function]}
                              handlePropertyChange={[Function]}
                              key="0"
                              node={
                                Object {
                                  "enabled": true,
                                  "id": "sentry.rules.actions.notify1",
                                  "label": "Send a notification for all services",
                                }
                              }
                            >
                              <RuleNodeRow>
                                <div
                                  className="css-5muuhy-RuleNodeRow e1qnqozx0"
                                >
                                  <RuleNodeForm>
                                    <div
                                      className="css-7h5qyd-RuleNodeForm e1qnqozx1"
                                    >
                                      <input
                                        name="id"
                                        type="hidden"
                                        value="sentry.rules.actions.notify1"
                                      />
                                      Send a notification for all services
                                    </div>
                                  </RuleNodeForm>
                                  <RuleNodeControls>
                                    <div
                                      className="css-1d10zz4-RuleNodeControls e1qnqozx2"
                                    >
                                      <Button
                                        disabled={false}
                                        onClick={[Function]}
                                        size="small"
                                        tabIndex="-1"
                                        type="button"
                                      >
                                        <StyledButton
                                          disabled={false}
                                          onClick={[Function]}
                                          role="button"
                                          size="small"
                                          tabIndex="-1"
                                          type="button"
                                        >
                                          <Component
                                            className="css-dkprmi-StyledButton-getColors e17811v30"
                                            disabled={false}
                                            onClick={[Function]}
                                            role="button"
                                            size="small"
                                            tabIndex="-1"
                                            type="button"
                                          >
                                            <button
                                              className="css-dkprmi-StyledButton-getColors e17811v30"
                                              disabled={false}
                                              onClick={[Function]}
                                              role="button"
                                              size="small"
                                              tabIndex="-1"
                                              type="button"
                                            >
                                              <ButtonLabel
                                                size="small"
                                              >
                                                <Component
                                                  className="css-179w01k-ButtonLabel e17811v31"
                                                  size="small"
                                                >
                                                  <Flex
                                                    align="center"
                                                    className="css-179w01k-ButtonLabel e17811v31"
                                                    size="small"
                                                  >
                                                    <Base
                                                      align="center"
                                                      className="e17811v31 css-8mahft-ButtonLabel"
                                                      size="small"
                                                    >
                                                      <div
                                                        className="e17811v31 css-8mahft-ButtonLabel"
                                                        is={null}
                                                        size="small"
                                                      >
                                                        <span
                                                          className="icon icon-trash"
                                                        />
                                                      </div>
                                                    </Base>
                                                  </Flex>
                                                </Component>
                                              </ButtonLabel>
                                            </button>
                                          </Component>
                                        </StyledButton>
                                      </Button>
                                    </div>
                                  </RuleNodeControls>
                                </div>
                              </RuleNodeRow>
                            </RuleNode>
                          </div>
                        </RuleNodes>
                        <fieldset>
                          <SelectInput
                            disabled={false}
                            multiple={false}
                            onChange={[Function]}
                            placeholder="Select an option..."
                            required={false}
                            showSearch={true}
                            style={
                              Object {
                                "width": "100%",
                              }
                            }
                            value=""
                          >
                            <select
                              disabled={false}
                              multiple={false}
                              onChange={[Function]}
                              placeholder="Select an option..."
                              required={false}
                              style={
                                Object {
                                  "width": "100%",
                                }
                              }
                              value=""
                            >
                              <option
                                key="blank"
                              />
                              <option
                                key="sentry.rules.actions.notify1"
                                value="sentry.rules.actions.notify1"
                              >
                                Send a notification for all services
                              </option>
                            </select>
                          </SelectInput>
                        </fieldset>
                      </div>
                    </RuleNodeList>
                    <hr />
                    <AlertRuleRow>
                      <h6
                        className="css-1pc4igl-AlertRuleRow elb7f1e0"
                      >
                        Perform these actions at most once every 
                        <Select2Field
                          allowClear={false}
                          allowEmpty={false}
                          choices={
                            Array [
                              Array [
                                "5",
                                "5 minutes",
                              ],
                              Array [
                                "10",
                                "10 minutes",
                              ],
                              Array [
                                "30",
                                "30 minutes",
                              ],
                              Array [
                                "60",
                                "60 minutes",
                              ],
                              Array [
                                "180",
                                "3 hours",
                              ],
                              Array [
                                "720",
                                "12 hours",
                              ],
                              Array [
                                "1440",
                                "24 hours",
                              ],
                              Array [
                                "10080",
                                "one week",
                              ],
                              Array [
                                "43200",
                                "30 days",
                              ],
                            ]
                          }
                          className=""
                          disabled={false}
                          escapeMarkup={true}
                          hideErrorMessage={false}
                          key="1"
                          multiple={false}
                          name="frequency"
                          onChange={[Function]}
                          placeholder="--"
                          required={true}
                          style={
                            Object {
                              "marginBottom": 0,
                              "marginLeft": 5,
                              "marginRight": 5,
                              "width": 140,
                            }
                          }
                        >
                          <div
                            className="control-group required"
                            style={
                              Object {
                                "marginBottom": 0,
                                "marginLeft": 5,
                                "marginRight": 5,
                                "width": 140,
                              }
                            }
                          >
                            <div
                              className="controls"
                            >
                              <select
                                className="form-control"
                                disabled={false}
                                id="id-frequency"
                                multiple={false}
                                onChange={[Function]}
                                placeholder="--"
                                required={true}
                                value=""
                              >
                                <option
                                  key="5"
                                  value="5"
                                >
                                  5 minutes
                                </option>
                                <option
                                  key="10"
                                  value="10"
                                >
                                  10 minutes
                                </option>
                                <option
                                  key="30"
                                  value="30"
                                >
                                  30 minutes
                                </option>
                                <option
                                  key="60"
                                  value="60"
                                >
                                  60 minutes
                                </option>
                                <option
                                  key="180"
                                  value="180"
                                >
                                  3 hours
                                </option>
                                <option
                                  key="720"
                                  value="720"
                                >
                                  12 hours
                                </option>
                                <option
                                  key="1440"
                                  value="1440"
                                >
                                  24 hours
                                </option>
                                <option
                                  key="10080"
                                  value="10080"
                                >
                                  one week
                                </option>
                                <option
                                  key="43200"
                                  value="43200"
                                >
                                  30 days
                                </option>
                              </select>
                            </div>
                          </div>
                        </Select2Field>
                         for an issue.
                      </h6>
                    </AlertRuleRow>
                    <ActionBar>
                      <div
                        className="css-bcc03y-ActionBar elb7f1e2"
                      >
                        <CancelButton
                          to="/settings/org-slug/project-slug/alerts/rules/"
                        >
                          <Button
                            className="css-1yc33o1-CancelButton elb7f1e1"
                            disabled={false}
                            to="/settings/org-slug/project-slug/alerts/rules/"
                          >
                            <StyledButton
                              aria-label="Cancel"
                              className="css-1yc33o1-CancelButton elb7f1e1"
                              disabled={false}
                              onClick={[Function]}
                              role="button"
                              to="/settings/org-slug/project-slug/alerts/rules/"
                            >
                              <Component
                                aria-label="Cancel"
                                className="elb7f1e1 css-tzavck-StyledButton-getColors-CancelButton e17811v30"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                                to="/settings/org-slug/project-slug/alerts/rules/"
                              >
                                <Link
                                  aria-label="Cancel"
                                  className="elb7f1e1 css-tzavck-StyledButton-getColors-CancelButton e17811v30"
                                  disabled={false}
                                  onClick={[Function]}
                                  onlyActiveOnIndex={false}
                                  role="button"
                                  style={Object {}}
                                  to="/settings/org-slug/project-slug/alerts/rules/"
                                >
                                  <a
                                    aria-label="Cancel"
                                    className="elb7f1e1 css-tzavck-StyledButton-getColors-CancelButton e17811v30"
                                    disabled={false}
                                    onClick={[Function]}
                                    role="button"
                                    style={Object {}}
                                  >
                                    <ButtonLabel>
                                      <Component
                                        className="css-1lzmoq1-ButtonLabel e17811v31"
                                      >
                                        <Flex
                                          align="center"
                                          className="css-1lzmoq1-ButtonLabel e17811v31"
                                        >
                                          <Base
                                            align="center"
                                            className="e17811v31 css-1br8hoo-ButtonLabel"
                                          >
                                            <div
                                              className="e17811v31 css-1br8hoo-ButtonLabel"
                                              is={null}
                                            >
                                              Cancel
                                            </div>
                                          </Base>
                                        </Flex>
                                      </Component>
                                    </ButtonLabel>
                                  </a>
                                </Link>
                              </Component>
                            </StyledButton>
                          </Button>
                        </CancelButton>
                        <Button
                          disabled={false}
                          priority="primary"
                        >
                          <StyledButton
                            aria-label="Save Rule"
                            disabled={false}
                            onClick={[Function]}
                            priority="primary"
                            role="button"
                          >
                            <Component
                              aria-label="Save Rule"
                              className="css-1msljz8-StyledButton-getColors e17811v30"
                              disabled={false}
                              onClick={[Function]}
                              priority="primary"
                              role="button"
                            >
                              <button
                                aria-label="Save Rule"
                                className="css-1msljz8-StyledButton-getColors e17811v30"
                                disabled={false}
                                onClick={[Function]}
                                priority="primary"
                                role="button"
                              >
                                <ButtonLabel>
                                  <Component
                                    className="css-1lzmoq1-ButtonLabel e17811v31"
                                  >
                                    <Flex
                                      align="center"
                                      className="css-1lzmoq1-ButtonLabel e17811v31"
                                    >
                                      <Base
                                        align="center"
                                        className="e17811v31 css-1br8hoo-ButtonLabel"
                                      >
                                        <div
                                          className="e17811v31 css-1br8hoo-ButtonLabel"
                                          is={null}
                                        >
                                          Save Rule
                                        </div>
                                      </Base>
                                    </Flex>
                                  </Component>
                                </ButtonLabel>
                              </button>
                            </Component>
                          </StyledButton>
                        </Button>
                      </div>
                    </ActionBar>
                  </div>
                </PanelBody>
              </div>
            </StyledPanel>
          </Panel>
        </form>
      </RuleEditor>
    </DocumentTitle>
  </SideEffect(DocumentTitle)>
</ProjectAlertRuleDetails>
`;

exports[`ProjectAlertRuleDetails New alert rule renders 1`] = `
<ProjectAlertRuleDetails
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  routes={
    Array [
      Object {
        "path": "/",
      },
      Object {
        "indexRoute": Object {},
        "name": "Settings",
        "newnew": true,
        "path": "/settings/",
      },
      Object {
        "name": "Organization",
        "path": ":orgId/",
      },
      Object {
        "name": "Project",
        "path": ":projectId/",
      },
      Object {},
      Object {
        "indexRoute": Object {
          "name": "General",
        },
      },
      Object {
        "indexRoute": Object {},
        "name": "Alerts",
        "path": "alerts/",
      },
      Object {
        "childRoutes": Array [
          Object {
            "name": "New",
            "path": "new/",
          },
          Object {
            "name": "Edit",
            "path": ":ruleId/",
          },
        ],
        "component": null,
        "indexRoute": Object {},
        "name": "Rules",
        "path": "rules/",
      },
      Object {
        "name": "Edit",
        "path": ":ruleId/",
      },
    ]
  }
>
  <SideEffect(DocumentTitle)
    title="Sentry"
  >
    <DocumentTitle
      title="Sentry"
    >
      <RuleEditor
        actions={
          Array [
            Object {
              "enabled": true,
              "id": "sentry.rules.actions.notify1",
              "label": "Send a notification for all services",
            },
          ]
        }
        conditions={
          Array [
            Object {
              "enabled": true,
              "id": "sentry.rules.conditions.1",
              "label": "An event is seen",
            },
          ]
        }
        organization={
          Object {
            "access": Array [
              "org:read",
              "org:write",
              "org:admin",
              "project:read",
              "project:write",
              "project:admin",
              "team:read",
              "team:write",
              "team:admin",
            ],
            "features": Array [],
            "id": "3",
            "name": "Organization Name",
            "onboardingTasks": Array [],
            "projects": Array [],
            "slug": "org-slug",
            "status": Object {
              "id": "active",
              "name": "active",
            },
            "teams": Array [],
          }
        }
        params={
          Object {
            "orgId": "org-slug",
            "projectId": "project-slug",
          }
        }
        project={
          Object {
            "hasAccess": true,
            "id": "2",
            "isBookmarked": false,
            "isMember": true,
            "name": "Project Name",
            "slug": "project-slug",
            "teams": Array [],
          }
        }
        routes={
          Array [
            Object {
              "path": "/",
            },
            Object {
              "indexRoute": Object {},
              "name": "Settings",
              "newnew": true,
              "path": "/settings/",
            },
            Object {
              "name": "Organization",
              "path": ":orgId/",
            },
            Object {
              "name": "Project",
              "path": ":projectId/",
            },
            Object {},
            Object {
              "indexRoute": Object {
                "name": "General",
              },
            },
            Object {
              "indexRoute": Object {},
              "name": "Alerts",
              "path": "alerts/",
            },
            Object {
              "childRoutes": Array [
                Object {
                  "name": "New",
                  "path": "new/",
                },
                Object {
                  "name": "Edit",
                  "path": ":ruleId/",
                },
              ],
              "component": null,
              "indexRoute": Object {},
              "name": "Rules",
              "path": "rules/",
            },
            Object {
              "name": "Edit",
              "path": ":ruleId/",
            },
          ]
        }
      >
        <form
          onSubmit={[Function]}
        >
          <Panel
            className="rule-detail"
          >
            <StyledPanel
              className="rule-detail"
            >
              <div
                className="rule-detail css-17lswg2-StyledPanel e1laxa7d0"
              >
                <PanelHeader>
                  <StyledPanelHeader>
                    <Component
                      className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
                    >
                      <Flex
                        align="center"
                        className="css-18jrszy-StyledPanelHeader-getPadding e1p8v8nv0"
                        justify="space-between"
                      >
                        <Base
                          align="center"
                          className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                          justify="space-between"
                        >
                          <div
                            className="e1p8v8nv0 css-16zagq0-StyledPanelHeader-getPadding"
                            is={null}
                          >
                            New Alert Rule
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </StyledPanelHeader>
                </PanelHeader>
                <PanelBody
                  direction="column"
                  disablePadding={false}
                  flex={false}
                >
                  <div
                    className="css-zhfi4l-padding-textStyles"
                  >
                    <h6>
                      Rule name
                      :
                    </h6>
                    <TextField
                      defaultValue=""
                      disabled={false}
                      hideErrorMessage={false}
                      name="name"
                      onChange={[Function]}
                      placeholder="My Rule Name"
                      required={true}
                    >
                      <div
                        className="control-group required"
                      >
                        <div
                          className="controls"
                        >
                          <input
                            className="form-control"
                            disabled={false}
                            id="id-name"
                            name="name"
                            onChange={[Function]}
                            placeholder="My Rule Name"
                            required={true}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </TextField>
                    <hr />
                    <AlertRuleRow>
                      <h6
                        className="css-1pc4igl-AlertRuleRow elb7f1e0"
                      >
                        Every time 
                        <Select2Field
                          allowClear={false}
                          allowEmpty={false}
                          choices={
                            Array [
                              Array [
                                "all",
                                "all",
                              ],
                              Array [
                                "any",
                                "any",
                              ],
                              Array [
                                "none",
                                "none",
                              ],
                            ]
                          }
                          className=""
                          disabled={false}
                          escapeMarkup={true}
                          hideErrorMessage={false}
                          key="1"
                          multiple={false}
                          name="actionMatch"
                          onChange={[Function]}
                          placeholder="--"
                          required={true}
                          style={
                            Object {
                              "marginBottom": 0,
                              "marginLeft": 5,
                              "marginRight": 5,
                              "width": 100,
                            }
                          }
                          value="all"
                        >
                          <div
                            className="control-group required"
                            style={
                              Object {
                                "marginBottom": 0,
                                "marginLeft": 5,
                                "marginRight": 5,
                                "width": 100,
                              }
                            }
                          >
                            <div
                              className="controls"
                            >
                              <select
                                className="form-control"
                                disabled={false}
                                id="id-actionMatch"
                                multiple={false}
                                onChange={[Function]}
                                placeholder="--"
                                required={true}
                                value="all"
                              >
                                <option
                                  key="all"
                                  value="all"
                                >
                                  all
                                </option>
                                <option
                                  key="any"
                                  value="any"
                                >
                                  any
                                </option>
                                <option
                                  key="none"
                                  value="none"
                                >
                                  none
                                </option>
                              </select>
                            </div>
                          </div>
                        </Select2Field>
                         of these conditions are met:
                      </h6>
                    </AlertRuleRow>
                    <RuleNodeList
                      className="rule-condition-list"
                      handleAddRow={[Function]}
                      handleDeleteRow={[Function]}
                      handlePropertyChange={[Function]}
                      items={Array []}
                      nodes={
                        Array [
                          Object {
                            "enabled": true,
                            "id": "sentry.rules.conditions.1",
                            "label": "An event is seen",
                          },
                        ]
                      }
                    >
                      <div
                        className="rule-condition-list"
                      >
                        <RuleNodes>
                          <div
                            className="css-wlwbnk-RuleNodes e17yy09u0"
                          />
                        </RuleNodes>
                        <fieldset>
                          <SelectInput
                            disabled={false}
                            multiple={false}
                            onChange={[Function]}
                            placeholder="Select an option..."
                            required={false}
                            showSearch={true}
                            style={
                              Object {
                                "width": "100%",
                              }
                            }
                            value=""
                          >
                            <select
                              disabled={false}
                              multiple={false}
                              onChange={[Function]}
                              placeholder="Select an option..."
                              required={false}
                              style={
                                Object {
                                  "width": "100%",
                                }
                              }
                              value=""
                            >
                              <option
                                key="blank"
                              />
                              <option
                                key="sentry.rules.conditions.1"
                                value="sentry.rules.conditions.1"
                              >
                                An event is seen
                              </option>
                            </select>
                          </SelectInput>
                        </fieldset>
                      </div>
                    </RuleNodeList>
                    <hr />
                    <h6>
                      In this environment
                      :
                    </h6>
                    <Select2Field
                      allowClear={false}
                      allowEmpty={false}
                      choices={
                        Array [
                          Array [
                            "__all_environments__",
                            "All Environments",
                          ],
                          Array [
                            "production",
                            "Production",
                          ],
                          Array [
                            "staging",
                            "Staging",
                          ],
                        ]
                      }
                      className=""
                      disabled={false}
                      escapeMarkup={true}
                      hideErrorMessage={false}
                      multiple={false}
                      name="environment"
                      onChange={[Function]}
                      placeholder="--"
                      required={true}
                      style={
                        Object {
                          "marginBottom": 0,
                          "marginLeft": 5,
                          "marginRight": 5,
                        }
                      }
                      value="__all_environments__"
                    >
                      <div
                        className="control-group required"
                        style={
                          Object {
                            "marginBottom": 0,
                            "marginLeft": 5,
                            "marginRight": 5,
                          }
                        }
                      >
                        <div
                          className="controls"
                        >
                          <select
                            className="form-control"
                            disabled={false}
                            id="id-environment"
                            multiple={false}
                            onChange={[Function]}
                            placeholder="--"
                            required={true}
                            value="__all_environments__"
                          >
                            <option
                              key="__all_environments__"
                              value="__all_environments__"
                            >
                              All Environments
                            </option>
                            <option
                              key="production"
                              value="production"
                            >
                              Production
                            </option>
                            <option
                              key="staging"
                              value="staging"
                            >
                              Staging
                            </option>
                          </select>
                        </div>
                      </div>
                    </Select2Field>
                    <hr />
                    <h6>
                      Take these actions:
                    </h6>
                    <RuleNodeList
                      handleAddRow={[Function]}
                      handleDeleteRow={[Function]}
                      handlePropertyChange={[Function]}
                      items={Array []}
                      nodes={
                        Array [
                          Object {
                            "enabled": true,
                            "id": "sentry.rules.actions.notify1",
                            "label": "Send a notification for all services",
                          },
                        ]
                      }
                    >
                      <div>
                        <RuleNodes>
                          <div
                            className="css-wlwbnk-RuleNodes e17yy09u0"
                          />
                        </RuleNodes>
                        <fieldset>
                          <SelectInput
                            disabled={false}
                            multiple={false}
                            onChange={[Function]}
                            placeholder="Select an option..."
                            required={false}
                            showSearch={true}
                            style={
                              Object {
                                "width": "100%",
                              }
                            }
                            value=""
                          >
                            <select
                              disabled={false}
                              multiple={false}
                              onChange={[Function]}
                              placeholder="Select an option..."
                              required={false}
                              style={
                                Object {
                                  "width": "100%",
                                }
                              }
                              value=""
                            >
                              <option
                                key="blank"
                              />
                              <option
                                key="sentry.rules.actions.notify1"
                                value="sentry.rules.actions.notify1"
                              >
                                Send a notification for all services
                              </option>
                            </select>
                          </SelectInput>
                        </fieldset>
                      </div>
                    </RuleNodeList>
                    <hr />
                    <AlertRuleRow>
                      <h6
                        className="css-1pc4igl-AlertRuleRow elb7f1e0"
                      >
                        Perform these actions at most once every 
                        <Select2Field
                          allowClear={false}
                          allowEmpty={false}
                          choices={
                            Array [
                              Array [
                                "5",
                                "5 minutes",
                              ],
                              Array [
                                "10",
                                "10 minutes",
                              ],
                              Array [
                                "30",
                                "30 minutes",
                              ],
                              Array [
                                "60",
                                "60 minutes",
                              ],
                              Array [
                                "180",
                                "3 hours",
                              ],
                              Array [
                                "720",
                                "12 hours",
                              ],
                              Array [
                                "1440",
                                "24 hours",
                              ],
                              Array [
                                "10080",
                                "one week",
                              ],
                              Array [
                                "43200",
                                "30 days",
                              ],
                            ]
                          }
                          className=""
                          disabled={false}
                          escapeMarkup={true}
                          hideErrorMessage={false}
                          key="1"
                          multiple={false}
                          name="frequency"
                          onChange={[Function]}
                          placeholder="--"
                          required={true}
                          style={
                            Object {
                              "marginBottom": 0,
                              "marginLeft": 5,
                              "marginRight": 5,
                              "width": 140,
                            }
                          }
                          value={30}
                        >
                          <div
                            className="control-group required"
                            style={
                              Object {
                                "marginBottom": 0,
                                "marginLeft": 5,
                                "marginRight": 5,
                                "width": 140,
                              }
                            }
                          >
                            <div
                              className="controls"
                            >
                              <select
                                className="form-control"
                                disabled={false}
                                id="id-frequency"
                                multiple={false}
                                onChange={[Function]}
                                placeholder="--"
                                required={true}
                                value={30}
                              >
                                <option
                                  key="5"
                                  value="5"
                                >
                                  5 minutes
                                </option>
                                <option
                                  key="10"
                                  value="10"
                                >
                                  10 minutes
                                </option>
                                <option
                                  key="30"
                                  value="30"
                                >
                                  30 minutes
                                </option>
                                <option
                                  key="60"
                                  value="60"
                                >
                                  60 minutes
                                </option>
                                <option
                                  key="180"
                                  value="180"
                                >
                                  3 hours
                                </option>
                                <option
                                  key="720"
                                  value="720"
                                >
                                  12 hours
                                </option>
                                <option
                                  key="1440"
                                  value="1440"
                                >
                                  24 hours
                                </option>
                                <option
                                  key="10080"
                                  value="10080"
                                >
                                  one week
                                </option>
                                <option
                                  key="43200"
                                  value="43200"
                                >
                                  30 days
                                </option>
                              </select>
                            </div>
                          </div>
                        </Select2Field>
                         for an issue.
                      </h6>
                    </AlertRuleRow>
                    <ActionBar>
                      <div
                        className="css-bcc03y-ActionBar elb7f1e2"
                      >
                        <CancelButton
                          to="/settings/org-slug/project-slug/alerts/rules/"
                        >
                          <Button
                            className="css-1yc33o1-CancelButton elb7f1e1"
                            disabled={false}
                            to="/settings/org-slug/project-slug/alerts/rules/"
                          >
                            <StyledButton
                              aria-label="Cancel"
                              className="css-1yc33o1-CancelButton elb7f1e1"
                              disabled={false}
                              onClick={[Function]}
                              role="button"
                              to="/settings/org-slug/project-slug/alerts/rules/"
                            >
                              <Component
                                aria-label="Cancel"
                                className="elb7f1e1 css-tzavck-StyledButton-getColors-CancelButton e17811v30"
                                disabled={false}
                                onClick={[Function]}
                                role="button"
                                to="/settings/org-slug/project-slug/alerts/rules/"
                              >
                                <Link
                                  aria-label="Cancel"
                                  className="elb7f1e1 css-tzavck-StyledButton-getColors-CancelButton e17811v30"
                                  disabled={false}
                                  onClick={[Function]}
                                  onlyActiveOnIndex={false}
                                  role="button"
                                  style={Object {}}
                                  to="/settings/org-slug/project-slug/alerts/rules/"
                                >
                                  <a
                                    aria-label="Cancel"
                                    className="elb7f1e1 css-tzavck-StyledButton-getColors-CancelButton e17811v30"
                                    disabled={false}
                                    onClick={[Function]}
                                    role="button"
                                    style={Object {}}
                                  >
                                    <ButtonLabel>
                                      <Component
                                        className="css-1lzmoq1-ButtonLabel e17811v31"
                                      >
                                        <Flex
                                          align="center"
                                          className="css-1lzmoq1-ButtonLabel e17811v31"
                                        >
                                          <Base
                                            align="center"
                                            className="e17811v31 css-1br8hoo-ButtonLabel"
                                          >
                                            <div
                                              className="e17811v31 css-1br8hoo-ButtonLabel"
                                              is={null}
                                            >
                                              Cancel
                                            </div>
                                          </Base>
                                        </Flex>
                                      </Component>
                                    </ButtonLabel>
                                  </a>
                                </Link>
                              </Component>
                            </StyledButton>
                          </Button>
                        </CancelButton>
                        <Button
                          disabled={false}
                          priority="primary"
                        >
                          <StyledButton
                            aria-label="Save Rule"
                            disabled={false}
                            onClick={[Function]}
                            priority="primary"
                            role="button"
                          >
                            <Component
                              aria-label="Save Rule"
                              className="css-1msljz8-StyledButton-getColors e17811v30"
                              disabled={false}
                              onClick={[Function]}
                              priority="primary"
                              role="button"
                            >
                              <button
                                aria-label="Save Rule"
                                className="css-1msljz8-StyledButton-getColors e17811v30"
                                disabled={false}
                                onClick={[Function]}
                                priority="primary"
                                role="button"
                              >
                                <ButtonLabel>
                                  <Component
                                    className="css-1lzmoq1-ButtonLabel e17811v31"
                                  >
                                    <Flex
                                      align="center"
                                      className="css-1lzmoq1-ButtonLabel e17811v31"
                                    >
                                      <Base
                                        align="center"
                                        className="e17811v31 css-1br8hoo-ButtonLabel"
                                      >
                                        <div
                                          className="e17811v31 css-1br8hoo-ButtonLabel"
                                          is={null}
                                        >
                                          Save Rule
                                        </div>
                                      </Base>
                                    </Flex>
                                  </Component>
                                </ButtonLabel>
                              </button>
                            </Component>
                          </StyledButton>
                        </Button>
                      </div>
                    </ActionBar>
                  </div>
                </PanelBody>
              </div>
            </StyledPanel>
          </Panel>
        </form>
      </RuleEditor>
    </DocumentTitle>
  </SideEffect(DocumentTitle)>
</ProjectAlertRuleDetails>
`;
